# AI-Trend-Tool

./: .dockerignore  .gitignore  CLAUDE.md  CLAUDE.original.md  Cargo.toml  Dockerfile  README.md  build.rs  config.toml
.claude/: settings.json
docs/Live-Artifact/: DESIGN-HANDOFF.md  DESIGN-MANIFEST.json  ai-hotspot-monitor.html  artifact.json  data.json  index.html  mq2d08s0-AI-Trend-Minitor.md  provenance.json  template.html
docs/apis/: channel-api.md  keyword-api.md  query-api.md  source-api.md  token-api.md
docs/data/: hotspot.db  hotspot.db-shm  hotspot.db-wal
docs/migrations/: 20260607044921_init.sql  20260609000001_hot_events_unique.sql  20260609000002_token_hash.sql  20260610000001_drop_token_plaintext.sql  20260610000002_mentions_unique_index.sql  20260613000001_article_status.sql  20260613000002_push_record_enhancements.sql
docs/plans/: 01-backend-project-setup.md  02-database-migrations.md  03-auth-and-token-api.md  04-crud-apis.md  05-query-apis-and-background-modules.md  06-frontend-setup.md  07-frontend-management-pages.md  08-frontend-dashboard.md  09-event-driven-pipeline.md  10-code-review-fixes.md  11-project-audit-fixes.md  12-backend-file-logging.md  13-push-state-machine.md  14-push-state-machine-frontend.md
openspec/: config.yaml
openspec/changes/code-review-fixes/: tasks.md
openspec/changes/db-migrations-and-models/: proposal.md  tasks.md
openspec/changes/event-driven-pipeline/: proposal.md  tasks.md
openspec/changes/frontend-management-pages/: design.md  proposal.md  tasks.md
openspec/changes/frontend-setup/: design.md  tasks.md
openspec/changes/project-audit-fixes-p0/: design.md  proposal.md  tasks.md
openspec/changes/project-audit-fixes-p1/: proposal.md  tasks.md
openspec/changes/project-audit-fixes-p2/: design.md  proposal.md  tasks.md
openspec/changes/push-state-machine/: tasks.md
openspec/changes/query-apis-and-background-modules/: design.md  tasks.md
openspec/specs/api-client-layer/: spec.md
openspec/specs/app-layout/: spec.md
openspec/specs/article-status-machine/: spec.md
openspec/specs/auth-middleware/: spec.md
openspec/specs/auth-page/: spec.md
openspec/specs/backend-file-logging/: spec.md
openspec/specs/backend-project-scaffold/: spec.md
openspec/specs/channel-crud-api/: spec.md
openspec/specs/channels-management-page/: spec.md
openspec/specs/config-validation/: spec.md
openspec/specs/dashboard-page/: spec.md
openspec/specs/data-models/: spec.md
openspec/specs/database-schema/: spec.md
openspec/specs/db-transaction-safety/: spec.md
openspec/specs/design-token-system/: spec.md
src/: config.rs  db.rs  error.rs  handlers.rs  logging.rs  main.rs  middleware.rs  models.rs  pipeline.rs  routes.rs  services.rs
src/db/: article.rs  channel.rs  hot_event.rs  keyword.rs  keyword_mention.rs  push_record.rs  source.rs  token.rs
src/handlers/: channel.rs  keyword.rs  query.rs  source.rs  token.rs
src/middleware/: auth.rs
src/models/: article.rs  channel.rs  hot_event.rs  keyword.rs  keyword_mention.rs  push_record.rs  source.rs  token.rs
src/services/: filter.rs  parser.rs  pusher.rs
web/: electron.vite.config.ts  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json  tsconfig.web.tsbuildinfo
(+370 files in other folders)
