[package]
name = "trend-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono", "migrate"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# RSS parsing (used in step 05, declared early)
feed-rs = "1"

# String matching (used in step 05, declared early)
aho-corasick = "1"

# HTTP client (webhook push, used in step 05)
reqwest = { version = "0.12", features = ["json"] }

# Random token generation
rand = "0.8"
hex = "0.4"

# Async trait (extensible parser)
async-trait = "0.1"

# Cancellation token for graceful shutdown
tokio-util = "0.7"

# SHA-256 for token hashing
sha2 = "0.10"

# Concurrent stream processing
futures = "0.3"

# ─── Profile: Release (production build) ───
[profile.release]
opt-level = 3          # Maximum optimization
lto = "fat"            # Full Link-Time Optimization across crates
codegen-units = 1      # Single codegen unit for better optimization (slower compile, faster binary)
strip = "symbols"      # Strip debug symbols to reduce binary size
panic = "abort"        # Abort on panic (smaller binary, no unwinding overhead)
incremental = false     # Disable incremental compilation for best optimization
overflow-checks = false # Disable integer overflow checks in release

# ─── Profile: Dev (fast iteration) ───
[profile.dev]
opt-level = 0          # No optimization for fast compile
incremental = true      # Enable incremental compilation

# ─── Profile: Dev-opt (optimized debug) ───
[profile.dev-opt]
inherits = "dev"
opt-level = 2          # Optimize for performance while keeping debug info
